--- a/Resources/Private/Language/Modfunc/locallang_modfunc2.xlf
+++ b/Resources/Private/Language/Modfunc/locallang_modfunc2.xlf
@@ -3,28 +3,28 @@
 	<file source-language="en" datatype="plaintext" original="EXT:tt_products/Resources/Private/Language/Modfunc/locallang_modfunc2.xlf" date="2017-07-08T13:15:42Z" product-name="tt_products">
 		<header/>
 		<body>
-			<trans-unit id="title" xml:space="preserve">
+			<trans-unit id="title" resname="title">
 				<source>Create Records in Alternative Languages</source>
 			</trans-unit>
-			<trans-unit id="only_admin" xml:space="preserve">
+			<trans-unit id="only_admin" resname="only_admin">
 				<source>These functions are only available for admins.</source>
 			</trans-unit>
-			<trans-unit id="pid_src" xml:space="preserve">
+			<trans-unit id="pid_src" resname="pid_src">
 				<source>The source id is %d.</source>
 			</trans-unit>
-			<trans-unit id="start" xml:space="preserve">
+			<trans-unit id="start" resname="start">
 				<source>Start the generation of the records!</source>
 			</trans-unit>
-			<trans-unit id="created" xml:space="preserve">
+			<trans-unit id="created" resname="created">
 				<source>The records have been generated.</source>
 			</trans-unit>
-            <trans-unit id="created_table" xml:space="preserve">
+            <trans-unit id="created_table" resname="created_table">
                 <source>%d %s have been created.</source>
             </trans-unit>
-			<trans-unit id="no_texts" xml:space="preserve">
+			<trans-unit id="no_texts" resname="no_texts">
 				<source>No text records found on this page.</source>
 			</trans-unit>
-			<trans-unit id="no_alternative_product" xml:space="preserve">
+			<trans-unit id="no_alternative_product" resname="no_alternative_product">
 				<source>No product in alternative language has been found for these uid: %s</source>
 			</trans-unit>
 		</body>
