--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -3,31 +3,31 @@
 	<file source-language="en" datatype="plaintext" original="EXT:tt_products/Resources/Private/Language/locallang.xlf" date="2021-11-23T20:33:04Z" product-name="tt_products">
 	<header/>
 		<body>
-			<trans-unit id="plugins_title" xml:space="preserve">
+			<trans-unit id="plugins_title" resname="plugins_title">
 				<source>Shop System</source>
 			</trans-unit>
-			<trans-unit id="plugins_description" xml:space="preserve">
+			<trans-unit id="plugins_description" resname="plugins_description">
 				<source>Add a shopping system plugin to the page. This makes it possible to sell products in multiple languages.</source>
 			</trans-unit>
-			<trans-unit id="m_default" xml:space="preserve">
+			<trans-unit id="m_default" resname="m_default">
 				<source>default</source>
 			</trans-unit>
-			<trans-unit id="m_ext" xml:space="preserve">
+			<trans-unit id="m_ext" resname="m_ext">
 				<source>extended</source>
 			</trans-unit>
-			<trans-unit id="m_variants" xml:space="preserve">
+			<trans-unit id="m_variants" resname="m_variants">
 				<source>variants</source>
 			</trans-unit>
-			<trans-unit id="pageModule.plugin" xml:space="preserve">
+			<trans-unit id="pageModule.plugin" resname="pageModule.plugin">
 				<source>Shop System: Products, Articles, Product Categories, Orders</source>
 			</trans-unit>
-			<trans-unit id="moduleFunction.tx_ttproducts_modfunc1" xml:space="preserve">
+			<trans-unit id="moduleFunction.tx_ttproducts_modfunc1" resname="moduleFunction.tx_ttproducts_modfunc1">
 				<source>Move Items (tt_products)</source>
 			</trans-unit>
-			<trans-unit id="moduleFunction.tx_ttproducts_modfunc2" xml:space="preserve">
+			<trans-unit id="moduleFunction.tx_ttproducts_modfunc2" resname="moduleFunction.tx_ttproducts_modfunc2">
 				<source>Create Records in Alternative Languages (tt_products)</source>
 			</trans-unit>
-			<trans-unit id="moduleFunction.tx_ttproducts_modfunc3" xml:space="preserve">
+			<trans-unit id="moduleFunction.tx_ttproducts_modfunc3" resname="moduleFunction.tx_ttproducts_modfunc3">
 				<source>Import images into FAL (tt_products)</source>
 			</trans-unit>
 		</body>
