--- a/Resources/Private/Language/Csh/locallang_csh_sys_products_cards.xlf
+++ b/Resources/Private/Language/Csh/locallang_csh_sys_products_cards.xlf
@@ -3,16 +3,16 @@
 	<file source-language="en" datatype="plaintext" original="EXT:tt_products/Resources/Private/Language/Csh/locallang_csh_sys_products_cards.xlf" date="2021-11-23T20:34:32Z" product-name="tt_products">
 		<header/>
 		<body>
-			<trans-unit id=".description" xml:space="preserve">
+			<trans-unit id=".description" resname=".description">
 				<source>Shop credit cards.</source>
 			</trans-unit>
-			<trans-unit id=".details" xml:space="preserve">
+			<trans-unit id=".details" resname=".details">
 				<source>Some orders have been made with credit cards. Hide them as much as you can and delete them as soon as possible!</source>
 			</trans-unit>
-			<trans-unit id="_.seeAlso" xml:space="preserve">
+			<trans-unit id="_.seeAlso" resname="_.seeAlso">
 				<source>tt_products</source>
 			</trans-unit>
-			<trans-unit id="title.description" xml:space="preserve">
+			<trans-unit id="title.description" resname="title.description">
 				<source>[FILL IN] sys_products_cards-&gt;title</source>
 			</trans-unit>
 		</body>
