--- a/Resources/Private/Language/Csh/locallang_csh_tt_products_emails.xlf
+++ b/Resources/Private/Language/Csh/locallang_csh_tt_products_emails.xlf
@@ -3,16 +3,16 @@
 	<file source-language="en" datatype="plaintext" original="EXT:tt_products/Resources/Private/Language/Csh/locallang_csh_tt_products_emails.xlf" date="2021-11-23T20:34:48Z" product-name="tt_products">
 		<header/>
 		<body>
-			<trans-unit id=".description" xml:space="preserve">
+			<trans-unit id=".description" resname=".description">
 				<source>Shop emails.</source>
 			</trans-unit>
-			<trans-unit id=".details" xml:space="preserve">
+			<trans-unit id=".details" resname=".details">
 				<source>The email addresses are used to send notification emails on a category base of the product.</source>
 			</trans-unit>
-			<trans-unit id="_.seeAlso" xml:space="preserve">
+			<trans-unit id="_.seeAlso" resname="_.seeAlso">
 				<source>tt_products</source>
 			</trans-unit>
-			<trans-unit id="title.description" xml:space="preserve">
+			<trans-unit id="title.description" resname="title.description">
 				<source>[FILL IN] tt_products_emails-&gt;title</source>
 			</trans-unit>
 		</body>
