--- a/Resources/Private/Language/Modfunc/locallang_modfunc1_csh.xlf
+++ b/Resources/Private/Language/Modfunc/locallang_modfunc1_csh.xlf
@@ -3,13 +3,13 @@
    <file source-language="en" datatype="plaintext" original="EXT:tt_products/Resources/Private/Language/Modfunc/locallang_modfunc1_csh.xlf" date="2017-07-08T17:08:00Z" product-name="import">
 		<header/>
 		<body>
-			<trans-unit id="tt_products.func1.moveItemsWizard">
+			<trans-unit id="tt_products.func1.moveItemsWizard" resname="tt_products.func1.moveItemsWizard">
 				<source>Execute the Move Items Wizard</source>
 			</trans-unit>
-            <trans-unit id="tt_products.func1.alttitle">
+            <trans-unit id="tt_products.func1.alttitle" resname="tt_products.func1.alttitle">
                 <source>Move Items wizard for tt_products tables</source>
             </trans-unit>
-            <trans-unit id="tt_products.func1.description" xml:space="preserve">
+            <trans-unit id="tt_products.func1.description" xml:space="preserve" resname="tt_products.func1.description" xml:space="preserve">
                 <source>Enables you to move the records for all tables of tt_products.</source>
             </trans-unit>
         </body>
