--- a/Resources/Private/Language/Modfunc/locallang_modfunc3.xlf
+++ b/Resources/Private/Language/Modfunc/locallang_modfunc3.xlf
@@ -3,25 +3,25 @@
 	<file source-language="en" datatype="plaintext" original="EXT:tt_products/Resources/Private/Language/Modfunc/locallang_modfunc3.xlf" date="2017-07-08T13:15:50Z" product-name="tt_products">
 		<header/>
 		<body>
-			<trans-unit id="title" xml:space="preserve">
+			<trans-unit id="title" xml:space="preserve" resname="title" xml:space="preserve">
 				<source>Import images into FAL for tt_products.</source>
 			</trans-unit>
-			<trans-unit id="only_admin" xml:space="preserve">
+			<trans-unit id="only_admin" xml:space="preserve" resname="only_admin" xml:space="preserve">
 				<source>These functions are only available for admins.</source>
 			</trans-unit>
-			<trans-unit id="pid_src" xml:space="preserve">
+			<trans-unit id="pid_src" xml:space="preserve" resname="pid_src" xml:space="preserve">
 				<source>The source id is %d.</source>
 			</trans-unit>
-			<trans-unit id="start" xml:space="preserve">
+			<trans-unit id="start" xml:space="preserve" resname="start" xml:space="preserve">
 				<source>Start the import of the images into FAL!</source>
 			</trans-unit>
-			<trans-unit id="finished" xml:space="preserve">
+			<trans-unit id="finished" xml:space="preserve" resname="finished" xml:space="preserve">
 				<source>The import of the images into FAL has been finished!</source>
 			</trans-unit>
-			<trans-unit id="warning" xml:space="preserve">
+			<trans-unit id="warning" xml:space="preserve" resname="warning" xml:space="preserve">
 				<source>You must make a backup copy of your images in the folder uploads/pics manually before you continue! All image files from this folder will be removed.</source>
 			</trans-unit>
-            <trans-unit id="imported_number" xml:space="preserve">
+            <trans-unit id="imported_number" xml:space="preserve" resname="imported_number" xml:space="preserve">
                 <source>%s records of tt_products with images have been converted into FAL.</source>
             </trans-unit>
 		</body>
